# libccittfax

./: .clang-format  .gitignore  Makefile.am  Makefile.common  README.md  configure.ac
include/: Makefile.am  ccittfax.h
include/ccittfax/: ccittfax.h  config.h  defs.h
src/: Makefile.am  cf.c  cf.h  cf_utils.c  cf_utils.h  cfc.c  cfc.h  cfc_common.c  cfc_common.h  cfc_g3_1d.c  cfc_g3_1d.h  cfc_g3_2d.c  cfc_g4.c  cfc_tables.c  cfc_tables.h  cfd.c  cfd.h  cfd_g3_1d.c  cfd_g3_2d.c  cfd_g4.c  cfd_trie.c  cfd_trie.h  lib.c
tests/: Makefile.am  cfc.c  cfd.c  change.c  file.c  file.h  image.c  image.h  test.c
utils/: generate_trie.c  mkbmp.c
