## -*- mode: makefile; -*-

EXTRA_DIST =

include $(top_srcdir)/Makefile.common

lib_LTLIBRARIES = libccittfax.la
libccittfax_la_SOURCES =                        \
    cfc.c                                       \
    cfc_g3_1d.c                                 \
    cfc_g3_2d.c                                 \
    cfc_g4.c                                    \
    cfc_tables.c                                \
    cfd.c                                       \
    cfd_g3_1d.c                                 \
    cfd_g3_2d.c                                 \
    cfd_g4.c                                    \
    cf_utils.c                                  \
    lib.c
